--- a/vnexpress-news/package.json
+++ b/vnexpress-news/package.json
@@ -8,12 +8,14 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "antd": "^4.17.4",
+    "classnames": "^2.3.1",
     "craco-less": "^2.0.0",
     "dayjs": "^1.10.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "5",
     "react-scripts": "4",
+    "uuidv4": "^6.2.12",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
